file for details.

ELinks 0.11.4.GIT now:
----------------------

To be released as 0.11.5.

* critical bug 1027 in user SMJS: make elinks.keymaps treat null and
  "none" as equivalent actions, avoiding a segfault
* critical bug 1030: an assertion used to fail in the search dialog
  on systems that lack a usable <regex.h>
* major bug 503: various fixes in parsing and updating of elinks.conf
* build bug 1021: fixed uninitialized variable in http_got_header

ELinks 0.11.4:
--------------

Released on 2008-06-20.

* critical bug 755: fix crashes due to dangling pointers to struct
  form_state
* critical bugs 613, 714, 961: ``assertion list_empty(form_controls)
  failed''
* critical bug 945: don't crash if a Lua script calls e.g. error(nil)
* critical bug 1003: don't crash if a smart URI rewrite template gets
  too few parameters
* critical bug 1016: avoid JSFunctionSpec for better compatibility
  across versions of SpiderMonkey
* critical bugs 674, 956: don't reuse pointers to SpiderMonkey objects
  that may have been collected as garbage.  This fix causes bug 954.
* CVE-2007-2027: check if the program path contains "src/" before
  using ../po files
* important Debian bug 380347: prevent a buffer overflow in entity_cache
  and a possible subsequent crash
* major bug 788: don't read STRLEN n_a, which isn't initialized by
  POPpx of Perl v5.8.8 and later
* fix query parsing in file: URIs for local CGI (was broken in 0.11.3)
* bug 691: don't look up bogus IPv4 addresses based on characters of a
  hostname
* bug 712: GnuTLS works on https://www-s.uiuc.edu/[]
* fix active and passive FTP over IPv6
* bug 938: elinks -remote no longer needs a controlling tty
* bug 939: fix FSP directory listing (some compiler options left it empty)
* bug 978: Python's webbrowser.open_new_tab(URL) works since now
* bug 1012: compile with -fno-strict-overflow or -fwrapv if available
* bug 1014: fix incompatible pointer type in Perl_sys_init3 call